# moring-auth-library

./: .env.example  .gitignore  README.md  moring-auth-core-0.1.0.tgz  moring-auth-nextjs-0.1.1.tgz  moring-auth-react-0.1.0.tgz  package-lock.json  package.json
.docs/: 01-overview.md  02-sso-server.md  03-sdk-core.md  04-sdk-nextjs.md  05-sdk-react.md  06-sdk-express.md  07-sdk-cli.md  08-auth-flows.md  09-monorepo.md  10-deployment.md  README.md
.github/workflows/: publish.yml
examples/express-demo/: index.js
examples/fastapi-demo/: main.py
examples/nextjs-starter/: package.json
examples/nextjs-starter/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  required-server-files.json  routes-manifest.json  trace  trace-build
examples/nextjs-starter/.next/cache/: .previewinfo  .rscinfo
examples/nextjs-starter/.next/server/: app-paths-manifest.json  middleware-build-manifest.js  middleware-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.js  server-reference-manifest.json
examples/nextjs-starter/.next/types/: routes.d.ts  validator.ts
examples/nextjs-starter/src/: middleware.ts
python/core/: README.md  pyproject.toml
python/core/moring_auth/: __init__.py  client.py  verify.py
python/django/: README.md  pyproject.toml
python/django/moring_auth_django/: __init__.py
python/fastapi/: README.md  pyproject.toml
python/fastapi/moring_auth_fastapi/: __init__.py
src/app/: layout.tsx  page.tsx
src/app/protected/: page.tsx
src/lib/: auth.ts
(+96 files in other folders)
