[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "moring-auth-fastapi"
version = "0.1.0"
description = "FastAPI adapter for Moring SSO integration"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.100.0",
    "moring-auth>=0.1.0"
]
